--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 
     <h5>happy:</h5>
-    <img src="IMG_20220525_141320_400.jpg">
+    <img src="images/IMG_20220525_141320_400.jpg">
     <h5> sad: </h5>
-    <img src="sad.jpg">
+    <img src="images/sad.jpg">
 
 
     <h3>Happy Facts About My Neighbors</h3>
